<?php

declare(strict_types=1);

namespace DoctrineMigrations;

use Doctrine\DBAL\Schema\Schema;
use Doctrine\Migrations\AbstractMigration;

/**
 * Auto-generated Migration: Please modify to your needs!
 */
final class Version20250912134514 extends AbstractMigration
{
    public function getDescription(): string
    {
        return '';
    }

    public function up(Schema $schema): void
    {
        // this up() migration is auto-generated, please modify it to your needs
        $this->addSql('CREATE TABLE album (id SERIAL NOT NULL, PRIMARY KEY(id))');
        $this->addSql('ALTER TABLE photos ADD photo_url VARCHAR(255) NOT NULL');
        $this->addSql('ALTER TABLE photos ADD description VARCHAR(255) NOT NULL');
        $this->addSql('ALTER TABLE photos ADD date_added TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL');
        $this->addSql('ALTER TABLE photos ADD public BOOLEAN NOT NULL');
        $this->addSql('COMMENT ON COLUMN photos.date_added IS \'(DC2Type:datetime_immutable)\'');
    }

    public function down(Schema $schema): void
    {
        // this down() migration is auto-generated, please modify it to your needs
        $this->addSql('CREATE SCHEMA public');
        $this->addSql('DROP TABLE album');
        $this->addSql('ALTER TABLE photos DROP photo_url');
        $this->addSql('ALTER TABLE photos DROP description');
        $this->addSql('ALTER TABLE photos DROP date_added');
        $this->addSql('ALTER TABLE photos DROP public');
    }
}
